--- a/app/views/confirmation.scala.html
+++ b/app/views/confirmation.scala.html
@@ -10,6 +10,10 @@
 			<li ng-repeat="product in basketedProducts"><span
 				value="{{product.id}}"> {{product.name}} </span>
 		</ul>
+		
+		<button ng-click="buy(basketedProducts)">Buy!</button>
+		
+		<p>{{status}}</p>
 	</div>
 </div>
 
